--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
-activemq.queue=AQ
-activemq.topic=BT
+activemq.queue=QA
+activemq.topic=TA
