LearnAppB is designed as a consumer - refactoring - final task - 2 - done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.activemq.password=admin
 
 activemq.queue=QA
 activemq.topic=TA
+activemq.response.enabled=true
+activemq.response.delay=10
+activemq.response.queue=QR
