message with temp channel SERVER

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.activemq.password=admin
 
 activemq.queue=QA
 activemq.topic=TA
+
+activemq.transacted=false
+activemq.ackMode=1
+activemq.client.queue.name=client_queue
+activemq.client.delivery.mode=1
