--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,4 @@ spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
-activemq.queue=QA
-activemq.topic=TA
-activemq.response.enabled=true
-activemq.response.delay=10
-activemq.response.queue=QR
+activemq.queue=Consumer.myConsumer1.VirtualTopic.MY-SUPER-TOPIC
