PUBLISHER_SUBSCRIBER [SUBSCRIBER] FINAL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=CONSUMER_APP
+spring.application.name=SUBSCRIBER_APP
 server.port=8082
 
 spring.activemq.broker-url=tcp://localhost:61616
