--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
-activemq.queue=Consumer.myConsumer1.VirtualTopic.MY-SUPER-TOPIC
+activemq.virtual.topic=MY-SUPER-TOPIC
+activemq.virtual.queue=MY-SUPER-CONSUMER
