PRODUCER-SCALING-CONSUMER [CONSUMER] FINAL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.activemq.password=admin
 
 activemq.virtual.topic=MY-SUPER-TOPIC
 activemq.virtual.queue=MY-SUPER-CONSUMER
+
+emulate.processing.delay=5
