--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=CONSUMER_APP
 server.port=8082
 
-spring.activemq.broker-url=tcp://localhost:61616
-spring.activemq.user=admin
-spring.activemq.password=admin
+cloudy.rmq.user=ozfhzvtq
+cloudy.rmq.password=PgzE_nDQAhMLxp62AysyA74trni4Ek9P
+cloudy.rmq.virtual.host=ozfhzvtq
+cloudy.rmq.host=hawk.rmq.cloudamqp.com
+cloudy.rmq.port=5672
 
-activemq.queue=QA
-activemq.topic=TA
+rmq.declare.exchange=demo-exchange-1
+rmq.declare.routing.key=demo-routing-1
+rmq.declare.queue=demo-queue-1
+rmq.declare.consumer.name=consumer-name-1
+rmq.declare.consumer.tag=consumer-tag-1
