--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 spring.application.name=CONSUMER_APP
 server.port=8082
 
-cloudy.rmq.user=ozfhzvtq
-cloudy.rmq.password=PgzE_nDQAhMLxp62AysyA74trni4Ek9P
-cloudy.rmq.virtual.host=ozfhzvtq
-cloudy.rmq.host=hawk.rmq.cloudamqp.com
-cloudy.rmq.port=5672
+spring.rabbitmq.username: ozfhzvtq
+spring.rabbitmq.password: PgzE_nDQAhMLxp62AysyA74trni4Ek9P
+spring.rabbitmq.virtual-host: ozfhzvtq
+spring.rabbitmq.host: hawk.rmq.cloudamqp.com
+spring.rabbitmq.port: 5672
 
 rmq.declare.exchange=demo-exchange-1
-rmq.declare.routing.key=demo-routing-1
-rmq.declare.queue=demo-queue-1
+rmq.declare.routing.key.1=demo-routing-1
+rmq.declare.queue.1=demo-queue-1
+rmq.declare.routing.key.2=demo-routing-2
+rmq.declare.queue.2=demo-queue-2
 
-rmq.declare.consumer.name=consumer-name-1
-rmq.declare.consumer.tag=consumer-tag-1
+rmq.declare.consumer.name.1=consumer-name-1
+rmq.declare.consumer.name.2=consumer-name-2
