--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,36 @@
 spring.application.name=CONSUMER_APP
 server.port=8082
 
-spring.rabbitmq.username: ozfhzvtq
-spring.rabbitmq.password: PgzE_nDQAhMLxp62AysyA74trni4Ek9P
-spring.rabbitmq.virtual-host: ozfhzvtq
-spring.rabbitmq.host: hawk.rmq.cloudamqp.com
-spring.rabbitmq.port: 5672
+routing.key.header=myRoutingKey
 
-rmq.declare.exchange=demo-exchange-1
-rmq.declare.routing.key.1=demo-routing-1
-rmq.declare.queue.1=demo-queue-1
-rmq.declare.routing.key.2=demo-routing-2
-rmq.declare.queue.2=demo-queue-2
+# connection to Rabbit MQ
+spring.rabbitmq.virtual-host=ozfhzvtq
+spring.rabbitmq.username=ozfhzvtq
+spring.rabbitmq.password=PgzE_nDQAhMLxp62AysyA74trni4Ek9P
+spring.rabbitmq.host=hawk.rmq.cloudamqp.com
+spring.rabbitmq.port=5672
 
-rmq.declare.consumer.name.1=consumer-name-1
-rmq.declare.consumer.name.2=consumer-name-2
+##Spring Stream bindings
+mq.rabbit.exchange=demo-exchange-1
+
+spring.cloud.stream.bindings.input-queue1.destination=${mq.rabbit.exchange}
+spring.cloud.stream.bindings.input-queue1.group=demo-queue-1
+spring.cloud.stream.rabbit.bindings.input-queue1.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.input-queue1.consumer.bindingRoutingKey=routing-queue-1
+
+spring.cloud.stream.bindings.input-queue2.destination=${mq.rabbit.exchange}
+spring.cloud.stream.bindings.input-queue2.group=demo-queue-2
+spring.cloud.stream.rabbit.bindings.input-queue2.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.input-queue2.consumer.bindingRoutingKey=routing-queue-2
+
+spring.cloud.stream.bindings.output.destination=${mq.rabbit.exchange}
+spring.cloud.stream.rabbit.bindings.output.exchangeType=topic
+# SPEL expression to obtain routing key dynamically from message header. Statically same as routing key
+spring.cloud.stream.rabbit.bindings.output.producer.routingKeyExpression=headers['${routing.key.header}']
+
+##spring.cloud.stream.bindings.output-queue1.destination=demo-exchange
+##spring.cloud.stream.rabbit.bindings.output-queue1.exchangeType=topic
+##spring.cloud.stream.rabbit.bindings.output-queue1.producer.routingKey=routing-queue1
+##spring.cloud.stream.bindings.output-queue2.destination=demo-exchange
+##spring.cloud.stream.rabbit.bindings.output-queue2.exchangeType=topic
+##spring.cloud.stream.rabbit.bindings.output-queue2.producer.routingKey=routing-queue2
