working solution demo-stream-function lib

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=CONSUMER_APP
 server.port=8082
 
-routing.key.header=myRoutingKey
-
 # connection to Rabbit MQ
 spring.rabbitmq.virtual-host=ozfhzvtq
 spring.rabbitmq.username=ozfhzvtq
@@ -12,25 +10,20 @@ spring.rabbitmq.port=5672
 
 ##Spring Stream bindings
 mq.rabbit.exchange=demo-exchange-1
+routing.key.header=myRoutingKey
 
-spring.cloud.stream.bindings.input-queue1.destination=${mq.rabbit.exchange}
-spring.cloud.stream.bindings.input-queue1.group=demo-queue-1
-spring.cloud.stream.rabbit.bindings.input-queue1.consumer.queueNameGroupOnly=true
-spring.cloud.stream.rabbit.bindings.input-queue1.consumer.bindingRoutingKey=routing-queue-1
+spring.cloud.stream.function.definition=queue1Sink;queue2Sink
 
-spring.cloud.stream.bindings.input-queue2.destination=${mq.rabbit.exchange}
-spring.cloud.stream.bindings.input-queue2.group=demo-queue-2
-spring.cloud.stream.rabbit.bindings.input-queue2.consumer.queueNameGroupOnly=true
-spring.cloud.stream.rabbit.bindings.input-queue2.consumer.bindingRoutingKey=routing-queue-2
+spring.cloud.stream.bindings.queue1Sink-in-0.destination=${mq.rabbit.exchange}
+spring.cloud.stream.bindings.queue1Sink-in-0.group=demo-queue-1
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.bindingRoutingKey=routing-queue-1
 
-spring.cloud.stream.bindings.output.destination=${mq.rabbit.exchange}
-spring.cloud.stream.rabbit.bindings.output.exchangeType=topic
-# SPEL expression to obtain routing key dynamically from message header. Statically same as routing key
-spring.cloud.stream.rabbit.bindings.output.producer.routingKeyExpression=headers['${routing.key.header}']
+spring.cloud.stream.bindings.queue2Sink-in-0.destination=${mq.rabbit.exchange}
+spring.cloud.stream.bindings.queue2Sink-in-0.group=demo-queue-2
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.bindingRoutingKey=routing-queue-2
 
-##spring.cloud.stream.bindings.output-queue1.destination=demo-exchange
-##spring.cloud.stream.rabbit.bindings.output-queue1.exchangeType=topic
-##spring.cloud.stream.rabbit.bindings.output-queue1.producer.routingKey=routing-queue1
-##spring.cloud.stream.bindings.output-queue2.destination=demo-exchange
-##spring.cloud.stream.rabbit.bindings.output-queue2.exchangeType=topic
-##spring.cloud.stream.rabbit.bindings.output-queue2.producer.routingKey=routing-queue2
+spring.cloud.stream.bindings.source-out-0.destination=${mq.rabbit.exchange}
+spring.cloud.stream.rabbit.bindings.source-out-0.producer.exchangeType=topic
+spring.cloud.stream.rabbit.bindings.source-out-0.producer.routingKeyExpression=headers['${routing.key.header}']
