working solution demo-stream-function lib

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,17 @@ spring.cloud.stream.function.definition=queue1Sink;queue2Sink
 
 spring.cloud.stream.bindings.queue1Sink-in-0.destination=${mq.rabbit.exchange}
 spring.cloud.stream.bindings.queue1Sink-in-0.group=demo-queue-1
+#in-process retry approach provided by spring-cloud-stream: maxAttempts + interval
+spring.cloud.stream.bindings.queue1Sink-in-0.consumer.max-attempts=3
+spring.cloud.stream.bindings.queue1Sink-in-0.consumer.backOffInitialInterval=1000
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.queueNameGroupOnly=true
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.bindingRoutingKey=routing-queue-1
 
 spring.cloud.stream.bindings.queue2Sink-in-0.destination=${mq.rabbit.exchange}
 spring.cloud.stream.bindings.queue2Sink-in-0.group=demo-queue-2
+#in-process retry approach provided by spring-cloud-stream: maxAttempts + interval
+spring.cloud.stream.bindings.queue2Sink-in-0.consumer.max-attempts=3
+spring.cloud.stream.bindings.queue2Sink-in-0.consumer.backOffInitialInterval=1000
 spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.queueNameGroupOnly=true
 spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.bindingRoutingKey=routing-queue-2
 
