--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,51 +9,20 @@ spring.rabbitmq.host=hawk.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
 
 ##Spring Stream bindings
-mq.rabbit.exchange=demo-exchange-1
 mq.rabbit.q1=demo-queue-1
-mq.rabbit.q2=demo-queue-2
+mq.queue2Sink-in-0.consumer.bindingRoutingKey=routing-queue-2
 routing.key.header=myRoutingKey
-mq.msg.xDlx=x-dead-letter-exchange
-mq.msg.xDlRoutingKey=x-dead-letter-routing-key
-#different queue preset - if changing this -> recreate queue
-republish=true
 
-spring.cloud.stream.function.definition=queue1Sink;queue2Sink
+spring.cloud.stream.function.definition=queue1Sink
 
-spring.cloud.stream.bindings.queue1Sink-in-0.destination=${mq.rabbit.exchange}
+spring.cloud.stream.bindings.queue1Sink-in-0.destination=demo-exchange-1
 spring.cloud.stream.bindings.queue1Sink-in-0.group=${mq.rabbit.q1}
 #in-process retry approach provided by spring-cloud-stream: maxAttempts + interval
-spring.cloud.stream.bindings.queue1Sink-in-0.consumer.max-attempts=3
+spring.cloud.stream.bindings.queue1Sink-in-0.consumer.max-attempts=5
 spring.cloud.stream.bindings.queue1Sink-in-0.consumer.backOffInitialInterval=1000
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.queueNameGroupOnly=true
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.bindingRoutingKey=routing-queue-1
-#DLX\Q set
-# https://docs.spring.io/spring-cloud-stream/docs/current/reference/html/spring-cloud-stream-binder-rabbit.html#_retry_with_the_rabbitmq_binder
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.autoBindDlq=true
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.deadLetterExchange=retry-exchange
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.deadLetterQueueName=retry-queue
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.dlq-ttl=5000
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.republishToDlq=${republish}
-#NB!!! when empty -> routs to original Q
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.dlqDeadLetterExchange=
 
-spring.cloud.stream.bindings.queue2Sink-in-0.destination=${mq.rabbit.exchange}
-spring.cloud.stream.bindings.queue2Sink-in-0.group=${mq.rabbit.q1}
-#in-process retry approach provided by spring-cloud-stream: maxAttempts + interval
-spring.cloud.stream.bindings.queue2Sink-in-0.consumer.max-attempts=3
-spring.cloud.stream.bindings.queue2Sink-in-0.consumer.backOffInitialInterval=1000
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.queueNameGroupOnly=true
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.bindingRoutingKey=routing-queue-2
-#DLX\Q set
-# https://docs.spring.io/spring-cloud-stream/docs/current/reference/html/spring-cloud-stream-binder-rabbit.html#_retry_with_the_rabbitmq_binder
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.autoBindDlq=true
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.deadLetterExchange=retry-exchange
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.deadLetterQueueName=retry-queue
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.dlq-ttl=5000
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.republishToDlq=${republish}
-#NB!!! when empty -> routs to original Q
-spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.dlqDeadLetterExchange=
-
-spring.cloud.stream.bindings.source-out-0.destination=${mq.rabbit.exchange}
-spring.cloud.stream.rabbit.bindings.source-out-0.producer.exchangeType=topic
-spring.cloud.stream.rabbit.bindings.source-out-0.producer.routingKeyExpression=headers['${routing.key.header}']
+spring.cloud.stream.bindings.source2-out-0.destination=demo-exchange-2
+spring.cloud.stream.rabbit.bindings.source2-out-0.producer.exchangeType=topic
+spring.cloud.stream.rabbit.bindings.source2-out-0.producer.routingKeyExpression=headers['${routing.key.header}']
