--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,35 +7,57 @@ spring.rabbitmq.username=ozfhzvtq
 spring.rabbitmq.password=PgzE_nDQAhMLxp62AysyA74trni4Ek9P
 spring.rabbitmq.host=hawk.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-
-##Spring Stream bindings
-mq.rabbit.q1=demo-queue-1
-mq.queue2Sink-in-0.consumer.bindingRoutingKey=routing-queue-2
-routing.key.header=myRoutingKey
-mq.msg.xDlx=x-dead-letter-exchange
-mq.msg.xDlRoutingKey=x-dead-letter-routing-key
-#different queue preset - if changing this -> recreate queue
-republish=true
-
-spring.cloud.stream.function.definition=queue1Sink
-
-spring.cloud.stream.bindings.queue1Sink-in-0.destination=demo-exchange-1
-spring.cloud.stream.bindings.queue1Sink-in-0.group=${mq.rabbit.q1}
-#in-process retry approach provided by spring-cloud-stream: maxAttempts + interval
+spring.cloud.stream.function.definition=queue1Sink;queue2Sink;failedSink;deadletterSink
+spring.cloud.stream.bindings.queue1Sink-in-0.destination=demo-exchange
+spring.cloud.stream.bindings.queue1Sink-in-0.group=demo-queue1
 spring.cloud.stream.bindings.queue1Sink-in-0.consumer.max-attempts=1
-spring.cloud.stream.bindings.queue1Sink-in-0.consumer.backOffInitialInterval=1000
+
+spring.cloud.stream.bindings.queue2Sink-in-0.destination=demo-exchange
+spring.cloud.stream.bindings.queue2Sink-in-0.group=demo-queue2
+spring.cloud.stream.bindings.queue2Sink-in-0.consumer.max-attempts=1
+
+spring.cloud.stream.bindings.failedSink-in-0.destination=failed-exchange
+spring.cloud.stream.bindings.failedSink-in-0.group=failed-queue
+
+spring.cloud.stream.bindings.deadletterSink-in-0.destination=deadletter-exchange
+spring.cloud.stream.bindings.deadletterSink-in-0.group=deadletter-queue
+
+spring.cloud.stream.bindings.source-out-0.destination=demo-exchange
+
+spring.cloud.stream.bindings.failed-out-0.destination=failed-exchange
+
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.ttl=5000
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.maxLength=5
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.overflowBehavior=reject-publish-dlx
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.queueNameGroupOnly=true
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.bindingRoutingKey=routing-queue-1
-#DLX\Q set
-# https://docs.spring.io/spring-cloud-stream/docs/current/reference/html/spring-cloud-stream-binder-rabbit.html#_retry_with_the_rabbitmq_binder
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.bindingRoutingKey=routing-queue1
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.autoBindDlq=true
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.deadLetterExchange=retry-exchange
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.deadLetterQueueName=retry-queue
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.dlq-ttl=5000
-spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.republishToDlq=${republish}
-#NB!!! when empty -> routs to original Q
+spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.republishToDlq=true
 spring.cloud.stream.rabbit.bindings.queue1Sink-in-0.consumer.dlqDeadLetterExchange=
 
-spring.cloud.stream.bindings.source2-out-0.destination=demo-exchange-2
-spring.cloud.stream.rabbit.bindings.source2-out-0.producer.exchangeType=topic
-spring.cloud.stream.rabbit.bindings.source2-out-0.producer.routingKeyExpression=headers['${routing.key.header}']
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.ttl=5000
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.maxLength=5
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.overflowBehavior=reject-publish-dlx
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.bindingRoutingKey=routing-queue2
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.autoBindDlq=true
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.deadLetterExchange=retry-exchange
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.deadLetterQueueName=retry-queue
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.dlq-ttl=5000
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.republishToDlq=true
+spring.cloud.stream.rabbit.bindings.queue2Sink-in-0.consumer.dlqDeadLetterExchange=
+
+spring.cloud.stream.rabbit.bindings.failedSink-in-0.consumer.exchangeType=topic
+spring.cloud.stream.rabbit.bindings.failedSink-in-0.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.failedSink-in-0.consumer.requeueRejected=true
+
+spring.cloud.stream.rabbit.bindings.deadletterSink-in-0.consumer.exchangeType=topic
+spring.cloud.stream.rabbit.bindings.deadletterSink-in-0.consumer.queueNameGroupOnly=true
+spring.cloud.stream.rabbit.bindings.deadletterSink-in-0.consumer.requeueRejected=true
+
+spring.cloud.stream.rabbit.bindings.source-out-0.producer.exchangeType=topic
+spring.cloud.stream.rabbit.bindings.source-out-0.producer.routingKeyExpression=headers['myRoutingKey']
+spring.cloud.stream.rabbit.bindings.failed-out-0.producer.exchangeType=topic
